<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_solicitude"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_solicitude" />
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_client" />
        <item
            android:id="@+id/nav_commerce"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_commerce" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sync" />


    </group>
</menu>
