<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_solicitude">

    <fragment
        android:id="@+id/nav_solicitude"
        android:name="pe.juabsa.cipca.foprom.ui.home.solicitude.SolicitudeFragment"
        android:label="@string/menu_solicitude"
        tools:layout="@layout/fragment_home">
        <!--
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
            -->
    </fragment>

    <fragment
        android:id="@+id/nav_client"
        android:name="pe.juabsa.cipca.foprom.ui.home.client.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client">

        <argument
            android:name="userid"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/nav_commerce"
        android:name="pe.juabsa.cipca.foprom.ui.home.commerce.CommerceFragment"
        android:label="@string/menu_commerce"
        tools:layout="@layout/fragment_commerce" />
    <fragment
        android:id="@+id/generalDataFragment"
        android:name="pe.juabsa.cipca.foprom.ui.home.client.detail.GeneralDataFragment"
        android:label="GeneralDataFragment" >
        <action
            android:id="@+id/action_generalDataFragment_to_housingDataFragment"
            app:destination="@id/housingDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/laborDataFragment"
        android:name="pe.juabsa.cipca.foprom.ui.home.client.detail.LaborDataFragment"
        android:label="LaborDataFragment" >
        <action
            android:id="@+id/action_laborDataFragment_to_spouseInformationFragment"
            app:destination="@id/spouseInformationFragment" />
    </fragment>
    <fragment
        android:id="@+id/housingDataFragment"
        android:name="pe.juabsa.cipca.foprom.ui.home.client.detail.HousingDataFragment"
        android:label="fragment_housing_data"
        tools:layout="@layout/fragment_housing_data" >
        <action
            android:id="@+id/action_housingDataFragment_to_laborDataFragment"
            app:destination="@id/laborDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/spouseInformationFragment"
        android:name="pe.juabsa.cipca.foprom.ui.home.client.detail.SpouseInformationFragment"
        android:label="SpouseInformationFragment" />

    <fragment
        android:id="@+id/nav_sync"
        android:name="pe.juabsa.cipca.foprom.ui.home.sync.SyncFragment"
        android:label="@string/menu_sync"
        tools:layout="@layout/sync_fragment" />

    <fragment
        android:id="@+id/nav_location"
        android:name="pe.juabsa.cipca.foprom.ui.home.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/location_fragment" />

</navigation>